--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 </br></br>
 
 
-
+<br>
 <form action="" method="GET" style="color: #999">
 <div class="form-group" >
 	<div class="container-fluid">
@@ -24,7 +24,7 @@
 
 
 </br>
-<div class="col-md-6">
+<div class="col-md-4">
 <h3 class="curfont">
 What is OnToology
 </h3>
@@ -39,42 +39,51 @@ OnToology can handle <span class="underline">OWL</span> and <span class="underli
 
 </div>
 
-<div class="col-md-6">
+<div class="col-md-4">
 
 <h3 class="curfont">How to use it</h3>
-	<ol align="justify">
-	<li align="justify" class="">Enter your repo as user/repo i.e. myuser/myrepo (it does not work with organizations at the moment).</li>
-	<li align="justify" class="">You will be redirected to Github to authorize OnToology to access your repo.</li>
-	<li align="justify" class="">Update your ontology and push.</li>
-	<li align="justify" class="">OnToology will create pull request including generated files (documentation, diagrams and evaluation)</li>
-	<li align="justify" class="">Merge the pull request created by OnToology</li>
-	</ol>
+	<!--<ol align="justify">-->
+	<!--<li align="justify" class="">Enter your repo as user/repo i.e. myuser/myrepo (it does not work with organizations at the moment).</li>-->
+	<!--<li align="justify" class="">You will be redirected to Github to authorize OnToology to access your repo.</li>-->
+	<!--<li align="justify" class="">Update your ontology and push.</li>-->
+	<!--<li align="justify" class="">OnToology will create pull request including generated files (documentation, diagrams and evaluation)</li>-->
+	<!--<li align="justify" class="">Merge the pull request created by OnToology</li>-->
+	<!--</ol>-->
+	<p align="justify" class="">1. Enter your repo as user/repo i.e. myuser/myrepo (it does not work with organizations at the moment).</p>
+	<p align="justify" class="">2. You will be redirected to Github to authorize OnToology to access your repo.</p>
+	<p align="justify" class="">3. Update your ontology and push.</p>
+	<p align="justify" class="">4. OnToology will create pull request including generated files (documentation, diagrams and evaluation)</p>
+	<p align="justify" class="">5. Merge the pull request created by OnToology</p>
 
 </div>
 
 
-<div class="col-md-6">
+<div class="col-md-4">
 	<h3>What's new</h3>
-	<ul>
-		<li align="justify"><span class="bluish">Faster login</span>: We moved the extra step for private repositories detection to be done automatically.</li>
-		<li align="justify"><span class="bluish">Bundle Download</span>: Now you can download your ontology bundle of documentation, diagrams and evaluation report with a single click.</li>
-		<li align="justify"><span class="bluish">Publish with w3id</span>: You can publish persistent permanent URIs with w3id.org using OnToology.</li>
-		<li align="justify"><span class="bluish">Previsualization with vocabLite</span>: A nice and a clear way to visualize your ontologies in your repositories.</li>
-	</ul>
+	<!--<ul>-->
+		<!--<li align="justify"><span class="bluish">Faster login</span>: We moved the extra step for private repositories detection to be done automatically.</li>-->
+		<!--<li align="justify"><span class="bluish">Bundle Download</span>: Now you can download your ontology bundle of documentation, diagrams and evaluation report with a single click.</li>-->
+		<!--<li align="justify"><span class="bluish">Publish with w3id</span>: You can publish persistent permanent URIs with w3id.org using OnToology.</li>-->
+		<!--<li align="justify"><span class="bluish">Previsualization with vocabLite</span>: A nice and a clear way to visualize your ontologies in your repositories.</li>-->
+	<!--</ul>-->
+		<p align="justify"><span class="color2">Faster login</span>: We moved the extra step for private repositories detection to be done automatically.</p>
+		<p align="justify"><span class="color1">Bundle Download</span>: Now you can download your ontology bundle of documentation, diagrams and evaluation report with a single click.</p>
+		<p align="justify"><span class="color2">Publish with w3id</span>: You can publish persistent permanent URIs with w3id.org using OnToology.</p>
+		<p align="justify"><span class="color1">Previsualization with vocabLite</span>: A nice and a clear way to visualize your ontologies in your repositories.</p>
 </div>
 
 
-<div class="col-md-6">
-	<h3>Stats</h3>
-	<ul>
-		<!--
-		<li align="justify">Total number of users: <span class="bluish">{{num_of_users}}</span> users</li>
-		-->
-		<li align="justify">Total number of repos: <span class="bluish">{{num_of_repos}}</span> repos</li>
-		<li align="justify">Latest system update: July, 2016</li>
-		<li align="justify">Latest system usage: {{last_used| date:"F, Y"}}</li>
-	</ul>
-</div>
+<!--<div class="col-md-12">-->
+	<!--<h3>Stats</h3>-->
+	<!--<ul>-->
+		<!--&lt;!&ndash;-->
+		<!--<li align="justify">Total number of users: <span class="bluish">{{num_of_users}}</span> users</li>-->
+		<!--&ndash;&gt;-->
+		<!--<li align="justify">Total number of repos: <span class="bluish">{{num_of_repos}}</span> repos</li>-->
+		<!--<li align="justify">Latest system update: July, 2016</li>-->
+		<!--<li align="justify">Latest system usage: {{last_used| date:"F, Y"}}</li>-->
+	<!--</ul>-->
+<!--</div>-->
 
 <!--
 <div class="col-md-6">
