use refresh to fetch ontologies info for a repo

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,12 @@
         .color2back{background-color: #1d63db !important;}
         .color3{color: #FFFFFF !important;}
         .color3back{background-color: #FFFFFF !important;}
+        .color4{ color: #AED6F1 !important;}
+        .color4back{background-color: #AED6F1 !important;}
+        .color5{ color: #D6EAF8 !important;}
+        .color5back{background-color: #D6EAF8 !important;}
+        .color6{ color: #EBF5FB !important;}
+        .color6back{background-color: #EBF5FB !important;}
         .red{color: #FF0000 !important;}
         .redback{background-color: #FF0000 !important;}
         .blueback{background-color: #0000FF !important;}
@@ -143,7 +149,13 @@
     <!-- Jquery -->
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <!--<script>-->
 
+    <!--$( function() {-->
+    <!--$( document ).tooltip();-->
+  <!--} );-->
+<!--</script>-->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -168,8 +180,8 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
 
     <style>
-        .progress {background: #111111; border: 0px solid rgba(255, 255, 255, 1); border-radius: 4px; height: 20px;}
-        .progress-bar-custom {background: #FBFBFB;}
+        //.progress {background: #111111; border: 0px solid rgba(255, 255, 255, 1); border-radius: 4px; height: 20px;}
+        //.progress-bar-custom {background: #FBFBFB;}
         //.progress-striped .progress-bar-custom {background-color: rgba(66, 139, 202, 1); background-image:
         -webkit-gradient(linear,0 100%,100% 0,color-stop(0.25,rgba(255, 0, 0,
         0.15),color-stop(0.25,transparent),color-stop(0.5,transparent),color-stop(0.5,rgba(255, 0, 0,
@@ -178,12 +190,12 @@
         50%,rgba(255, 0, 0, 0.15) 75%,transparent 75%,transparent); background-image: linear-gradient(45deg,rgba(255, 0,
         0, 0.15) 25%,transparent 25%,transparent 50%,rgba(255, 0, 0, 0.15) 50%,rgba(255, 0, 0, 0.15) 75%,transparent
         75%,transparent); background-size: 40px 40px;}
-        .progress-striped .progress-bar-custom {background-color: #333333; background-image: -webkit-gradient(linear,0
-        100%,100%
-        0,color-stop(0.25,#FBFBFB,color-stop(0.25,transparent),color-stop(0.5,transparent),color-stop(0.5,#FBFBFB),color-stop(0.75,#FBFBFB),color-stop(0.75,transparent),to(transparent)));
-        background-image: -webkit-linear-gradient(45deg,#FBFBFB 25%,transparent 25%,transparent 50%,#FBFBFB 50%,#FBFBFB
-        75%,transparent 75%,transparent); background-image: linear-gradient(45deg,#FBFBFB 25%,transparent
-        25%,transparent 50%,#FBFBFB 50%,#FBFBFB 75%,transparent 75%,transparent); background-size: 40px 40px;} 
+        //.progress-striped .progress-bar-custom {background-color: #333333; background-image: -webkit-gradient(linear,0
+        //100%,100%
+        //0,color-stop(0.25,#FBFBFB,color-stop(0.25,transparent),color-stop(0.5,transparent),color-stop(0.5,#FBFBFB),color-stop(0.75,#FBFBFB),color-stop(0.75,transparent),to(transparent)));
+        //background-image: -webkit-linear-gradient(45deg,#FBFBFB 25%,transparent 25%,transparent 50%,#FBFBFB 50%,#FBFBFB
+        //75%,transparent 75%,transparent); background-image: linear-gradient(45deg,#FBFBFB 25%,transparent
+        //25%,transparent 50%,#FBFBFB 50%,#FBFBFB 75%,transparent 75%,transparent); background-size: 40px 40px;} 
 
     </style>
 
@@ -191,7 +203,7 @@
 <body>
 
 
-<div class="container-fluid">
+<div class="container-fluid ">
     <div class="row">
         <div class=" col-md-10 col-md-offset-1">
             <div class="col-md-5 " style="height: 100px;">
@@ -277,7 +289,7 @@
 
 <br><br><br><br><br><br>
 
-<footer class="footer navbar-fixed-bottom darkl opac">
+<footer class="footer navbar-bottom  opac">
     <div class="container-fluid">
         <div class="row ">
             <div class="col-md-6 col-md-offset-2 col-xs-6 " align="left">
@@ -285,12 +297,12 @@
                     <br>
                     <!-->
                 <p>
-                    Latest revision July, 2016<br>
+                    Latest revision August, 2016<br>
                     &copy; Ontology Engineering Group<br>
                     Contact: ontoology@delicias.dia.fi.upm.es<br>
-                    Powered by <a class="emph underline" href="https://github.com/dgarijo/Widoco">Widoco</a>, <a
-                        class="emph underline" href="https://github.com/idafensp/ar2dtool">AR2DTool</a> and <a
-                        class="emph underline" href="http://oops.linkeddata.es/">OOPS!</a>
+                    Powered by <a class="color1 underline" href="https://github.com/dgarijo/Widoco">Widoco</a>, <a
+                        class="color1 underline" href="https://github.com/idafensp/ar2dtool">AR2DTool</a> and <a
+                        class="color1 underline" href="http://oops.linkeddata.es/">OOPS!</a>
                 </p>
             </div>
             <div class="col-md-2 col-xs-6 " align="right">
