--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
 
 
 </br>
-<div class="col-md-4">
+<div class="col-md-4 color1back">
 <h3 class="curfont">
 What is OnToology
 </h3>
@@ -39,7 +39,7 @@ OnToology can handle <span class="underline">OWL</span> and <span class="underli
 
 </div>
 
-<div class="col-md-4">
+<div class="col-md-4 color4back">
 
 <h3 class="curfont">How to use it</h3>
 	<!--<ol align="justify">-->
@@ -58,7 +58,7 @@ OnToology can handle <span class="underline">OWL</span> and <span class="underli
 </div>
 
 
-<div class="col-md-4">
+<div class="col-md-4 color5back">
 	<h3>What's new</h3>
 	<!--<ul>-->
 		<!--<li align="justify"><span class="bluish">Faster login</span>: We moved the extra step for private repositories detection to be done automatically.</li>-->
@@ -66,9 +66,10 @@ OnToology can handle <span class="underline">OWL</span> and <span class="underli
 		<!--<li align="justify"><span class="bluish">Publish with w3id</span>: You can publish persistent permanent URIs with w3id.org using OnToology.</li>-->
 		<!--<li align="justify"><span class="bluish">Previsualization with vocabLite</span>: A nice and a clear way to visualize your ontologies in your repositories.</li>-->
 	<!--</ul>-->
-		<p align="justify"><span class="color2">Faster login</span>: We moved the extra step for private repositories detection to be done automatically.</p>
+		<p align="justify"><span class="color1">New interface</span>: We changed the interface to a bright theme with a better representation</p>
+		<p align="justify"><span class="color1">Faster login</span>: We moved the extra step for private repositories detection to be done automatically.</p>
 		<p align="justify"><span class="color1">Bundle Download</span>: Now you can download your ontology bundle of documentation, diagrams and evaluation report with a single click.</p>
-		<p align="justify"><span class="color2">Publish with w3id</span>: You can publish persistent permanent URIs with w3id.org using OnToology.</p>
+		<p align="justify"><span class="color1">Publish with w3id</span>: You can publish persistent permanent URIs with w3id.org using OnToology.</p>
 		<p align="justify"><span class="color1">Previsualization with vocabLite</span>: A nice and a clear way to visualize your ontologies in your repositories.</p>
 </div>
 
