--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,46 @@
 <div id="screen"></div>
 
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
+<!--<link rel="stylesheet" href="https://jqueryui.com/tooltip//resources/demos/style.css">-->
+<!--<script src="https://code.jquery.com/jquery-1.12.4.js"></script>-->
+<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+
+
+<script>
+
+
+$( function() {
+//$( document ).tooltip();
+ $( document ).tooltip({ position: { my: "center bottom", at: "center top" }});
+
+});
+
+
+
+
+
+
+</script>
+
+
+<script>
+
+
+
+
+// Getter
+//var position = $( "#tooltip10" ).tooltip( "option", "position" );
+
+// Setter
+//$( "#tooltip10" ).tooltip( "option", "position", { my: "left+15 center", at: "right center" } );
+
+
+
+
+</script>
+
+
 <style>
     #myspinner {
     z-index: 10;
@@ -25,6 +65,8 @@
     top: 0;
     background: #000;
     }
+
+
 </style>
 
 
@@ -47,6 +89,7 @@ function GetURLParameter(sParam)
 
 
 
+
 </script>
 
 
@@ -62,7 +105,8 @@ function GetURLParameter(sParam)
         <div class="container-fluid">
 
 	<span class=" col-md-9 col-xs-9">
-		<input type="text" name="target_repo" id="target_repo_select" class="form-control input-lg" placeholder="user/repo"></br>
+		<input type="text" name="target_repo" id="target_repo_select" class="form-control input-lg"
+               placeholder="user/repo"></br>
 	</span>
 	<span class="col-md-3 col-xs-3">
 		<input type="submit" class="form-control color1back color3 input-lg" value="Watch this repo"/>
@@ -80,59 +124,77 @@ function GetURLParameter(sParam)
         <div class="container-fluid">
             {%for r in repos%}
             {%if r.notes != ''%}
-            <div class="panel redback btn-danger ">
-				{%else%}
-				<div class="panel panel-default">
+            <div class="panel  panel-danger ">
+                {%else%}
+                <div class="panel color5back">
                     {%endif%}
-                    <div class="panel-heading repo " url="{{r.url}}">
+                    <div class="panel-heading  " >
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#coll{{forloop.counter}}">
+                            <a data-toggle="collapse" class="accordion-toggle" data-parent="#accordion"
+                               href="#coll{{forloop.counter}}">
                                 <div class="row">
-                                    <div class="col-md-11 col-xs-11">
-                                        <div class="container-fluid">
-                                            <div class="col-md-4 col-xs-4 darktext" style="text-align: left">{{r.url}}
-                                            </div>
-                                            <div class="col-md-4 col-xs-4 darktext">{{r.state}}</div>
-                                            <!--
-                                            <div class="col-md-4 col-xs-4 darktext">{{r.notes}}</div>
-                                            -->
-                                            <div class="col-md-4 col-xs-4 darktext">{{r.last_used| date:"d-M-Y H:i"}}
-                                            </div>
-                                        </div>
+                                    <div class="col-md-1 col-xs-1 ">
+                                        <i class="indicator glyphicon glyphicon-chevron-down "></i>
                                     </div>
 
-                                    <div class="col-md-1 col-xs-1 nonrepo">
-                                        <a class="dropdown-toggle darktext" data-toggle="dropdown"
-                                           href="#" role="button" aria-haspopup="true"
-                                           aria-expanded="false"> more<span class="caret"></span></a>
-                                        <ul class="dropdown-menu">
-                                            {%if r.notes != ''%}
-                                            <li><a onclick="show_error('{{r.notes}}')">show error</a></li>
-                                            {%endif%}
-                                            <li><a url="{{r.url}}" class="closee">Unwatch</a></li>
-                                            <li><a href="/renew_previsual?target_repo={{r.url}}">renew previsual</a>
-                                            </li>
-                                            {%if r.previsual_page_available %}
-                                            <li><a href="http://{{r.user}}.github.io/{{r.rrepo}}">go to previsual</a>
-                                            </li>
-                                            {%endif%}
-                                            <li>
-                                                <form id="generateall{{r.url}}" action="generateforall">
-                                                    <input type="hidden" name="repo" value={{r.url}}/>
-                                                </form>
-                                                <a class=""
-                                                   onclick="document.getElementById('generateall{{r.url}}').submit()">Generate
-                                                    documentation, diagrams and evaluation</a>
-                                            </li>
-                                            <!-- maybe we will added it later
-                                            {%if r.previsual%}
-                                            <li><a href="/previsual_toggle?target_repo={{r.url}}">Disable previsual</a></li>
-                                            {%else%}
-                                            <li><a href="/previsual_toggle?target_repo={{r.url}}">Enable previsual</a></li>
-                                            {%endif%}
-                                             -->
-                                        </ul>
+                                    <div class="col-md-4 col-xs-4 darktext" style="text-align: left">{{r.url}}
                                     </div>
+                                    <div class="col-md-1 col-xs-1 repo" style="color: #000;" url="{{r.url}}">
+                                        <span class="glyphicon glyphicon-refresh" title="Get ontologies configuration in this repo"></span>
+                                    </div>
+                                    <div class="col-md-1 col-xs-1">
+                                        <a class=""
+                                           onclick="document.getElementById('generateall{{r.url}}').submit()"
+                                           data-toggle="tooltip" data-placement="top"
+                                           title="Generate documentation, diagrams and evaluation">
+                                            <img src="media/icons/Administrative Tools Filled-100.png" height="20px">
+                                        </a>
+                                    </div>
+                                    <div class="col-md-1 col-xs-1"><img src="media/icons/Open in Browser Filled-100.png"
+                                                                        height="20px"></div>
+                                    <div class="col-md-1 col-xs-1"><img src="media/icons/Open in Browser Filled-2.png"
+                                                                        height="20px"></div>
+                                    <!--<div class="col-md-4 col-xs-4 darktext">{{r.state}}</div>-->
+                                    <!--
+                                    <div class="col-md-4 col-xs-4 darktext">{{r.notes}}</div>
+                                    -->
+                                    <div class="col-md-3 col-xs-3 darktext" align="center">
+                                        {{r.last_used| date:"d-M-YH:i"}}
+                                    </div>
+
+
+                                    <!--<div class="col-md-1 col-xs-1 nonrepo">-->
+                                    <!--<a class="dropdown-toggle darktext" data-toggle="dropdown"-->
+                                    <!--href="#" role="button" aria-haspopup="true"-->
+                                    <!--aria-expanded="false"> more<span class="caret"></span></a>-->
+                                    <!--<ul class="dropdown-menu">-->
+                                    <!--{%if r.notes != ''%}-->
+                                    <!--<li><a onclick="show_error('{{r.notes}}')">show error</a></li>-->
+                                    <!--{%endif%}-->
+                                    <!--<li><a url="{{r.url}}" class="closee">Unwatch</a></li>-->
+                                    <!--<li><a href="/renew_previsual?target_repo={{r.url}}">renew previsual</a>-->
+                                    <!--</li>-->
+                                    <!--{%if r.previsual_page_available %}-->
+                                    <!--<li><a href="http://{{r.user}}.github.io/{{r.rrepo}}">go to previsual</a>-->
+                                    <!--</li>-->
+                                    <!--{%endif%}-->
+                                    <!--<li>-->
+                                    <!--<form id="generateall{{r.url}}" action="generateforall">-->
+                                    <!--<input type="hidden" name="repo" value={{r.url}}/>-->
+                                    <!--</form>-->
+                                    <!--<a class=""-->
+                                    <!--onclick="document.getElementById('generateall{{r.url}}').submit()">Generate-->
+                                    <!--documentation, diagrams and evaluation</a>-->
+                                    <!--</li>-->
+                                    <!--&lt;!&ndash; maybe we will added it later-->
+                                    <!--{%if r.previsual%}-->
+                                    <!--<li><a href="/previsual_toggle?target_repo={{r.url}}">Disable previsual</a></li>-->
+                                    <!--{%else%}-->
+                                    <!--<li><a href="/previsual_toggle?target_repo={{r.url}}">Enable previsual</a></li>-->
+                                    <!--{%endif%}-->
+                                    <!--&ndash;&gt;-->
+                                    <!--</ul>-->
+                                    <!--</div>-->
                                     <!--
                                             <div class="col-md-1 col-xs-1 glyphicon glyphicon-remove-circle close" url="{{r.url}}"></div>
                                         --> </br>
@@ -142,11 +204,11 @@ function GetURLParameter(sParam)
                             </a>
                         </h4>
                     </div>
-                    <div id="coll{{forloop.counter}}" class="panel-collapse collapse">
+                    <div id="coll{{forloop.counter}}" class="panel-collapse collapse ">
                         <div class="panel-body ">
 
-							<div class="ontologiesspace"> Loading ontologies ...</div>
-							<!--
+                            <div class="ontologiesspace"> </div>
+                            <!--
                             <div class="ontologiesspace">Make sure you merge the pull request with the generated files or click on regenerate all to generate them</div>
                             -->
                             </br>
@@ -175,13 +237,11 @@ $("[name='{{r.id}}']").bootstrapSwitch('state',{{r.previsual}});
 {%endfor%}
  
 
+
 </script>
 
 
 </br>
-
-
-
 
 
 <!--
@@ -302,7 +362,8 @@ $( document ).ready(function() {
 			return;
 		}		
 		var targetpanel = $(this);
-		var bodypanel = $(this).parent().find(".ontologiesspace");
+		//var bodypanel = $(this).parent().find(".ontologiesspace");
+		var bodypanel = $(this).parent().parent().parent().parent().parent().find(".ontologiesspace");
 		current_url = $(this).attr('url');
 		//greyout();
 		$.ajax({
@@ -419,19 +480,20 @@ $( document ).ready(function() {
 		    
 		    */
 
+
 </script>
 
 <br>
 
 <table class="table">
     <tr>
-		<!--
+        <!--
         <th align="center" style="text-align: center;">Reserved Names</th>
-		-->
-		<th >Reserved Names</th>
-        <th >Repository</th>
-        <th >Ontology</th>
-        <th >w3id URL</th>
+        -->
+        <th>Reserved Names</th>
+        <th>Repository</th>
+        <th>Ontology</th>
+        <th>w3id URL</th>
     </tr>
     {%for p in pnames%}
     <tr>
@@ -487,7 +549,7 @@ $( document ).ready(function() {
     right: 0;
     margin: auto;">
         <div class="progress progress-striped active">
-            <div id="loading" class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="60"
+            <div id="loading" class="progress-bar progress-bar-custom progress-bar-info" role="progressbar" aria-valuenow="60"
                  aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
             </div>
         </div>
@@ -569,6 +631,19 @@ $( document ).ready(function() {
 
 
 
+function toggleChevron(e) {
+    //console.log('toggle')
+    //alert('toggle');
+    $(e.target)
+        .prev('.panel-heading')
+        .find("i.indicator")
+        .toggleClass('glyphicon-chevron-down glyphicon-chevron-right');
+}
+$('#accordion').on('hidden.bs.collapse', toggleChevron);
+$('#accordion').on('shown.bs.collapse', toggleChevron);
+
+
+
 </script>
 
 <script>
@@ -576,6 +651,10 @@ $( document ).ready(function() {
 	function show_error(error){
 		toastr.error(error);
 	}
+
+
+
+
 
 </script>
 
