repo name in panel to point to github url

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -111,7 +111,7 @@ function GetURLParameter(sParam)
                                     <div class="col-md-1 col-xs-1 ">
                                         <i class="indicator glyphicon glyphicon-chevron-down "></i>
                                     </div>
-                                    <div class="col-md-4 col-xs-4 darktext" style="text-align: left">{{r.url}}
+                                    <div class="col-md-4 col-xs-4 darktext" style="text-align: left"><a href="http://www.github.com/{{r.url}}">{{r.url}}</a>
                                     </div>
                                     <div class="col-md-1 col-xs-1 " style="color: #000;" >
                                         <span class="glyphicon glyphicon-refresh  repo" url="{{r.url}}" title="Get ontologies configuration in this repo"></span>
